fix side tabs labels alignment

--- a/jsapp/scss/components/_kobo.form-view.scss
+++ b/jsapp/scss/components/_kobo.form-view.scss
@@ -97,6 +97,7 @@
     font-weight: normal;
     letter-spacing: -0.01em;
     display: flex;
+    align-items: center;
     margin-left: 10px;
 
     &:hover,
